updated, need to create pages for each roll

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
 
     <!-- the main display -->
     <EditText
+        android:textColor="#f47920"
         android:id="@+id/display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
